# eie-llm

./: .eie_history  .gitignore  CMakeLists.txt  README.md
client/: README.md  client.py  requirements.txt
include/: bench.hpp  cpuinfo.hpp  gguf.hpp  model.hpp  ops.hpp  ops_avx2.hpp  prefix_cache.hpp  server.hpp  shell.hpp  tokenizer.hpp
scripts/: download_model.sh  run-gpt2.sh  run-llama32.sh  run-qwen25.sh  run-qwen3.sh  run-tinyllama.sh  run.sh  setup.sh
src/: bench.cpp  cpuinfo.cpp  gguf.cpp  main.cpp  model.cpp  ops.cpp  ops_avx2.cpp  prefix_cache.cpp  server.cpp  shell.cpp  test_tok.cpp  tokenizer.cpp
tools/: debug_q4k.py  inspect_gguf.py  verify_q4k.py
webui/: README.md  app.js  index.html  style.css
